[gd_scene load_steps=10 format=3 uid="uid://dqf2ir5irdwgu"]

[ext_resource type="Script" uid="uid://cogcn6dnwoe6p" path="res://scenes/menus/hud.gd" id="1_qi7qv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nc74a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ua5e"]
bg_color = Color(0.774181, 0, 0.32178, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ir5m6"]
bg_color = Color(0.113725, 0.113725, 0.113725, 0.27451)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv5uq"]
bg_color = Color(1.63645e-06, 0.508783, 0.711622, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xmy64"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfgnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lf75b"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_2xkr3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qi7qv")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 23.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer2" type="VSplitContainer" parent="ItemList"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 0
offset_right = 476.0
offset_bottom = 250.0

[node name="VSplitContainer" type="VSplitContainer" parent="ItemList/VSplitContainer2"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="Healthbar" type="ProgressBar" parent="ItemList/VSplitContainer2/VSplitContainer"]
z_index = 1
custom_minimum_size = Vector2(3, 22)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_nc74a")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ua5e")
value = 60.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="ItemList/VSplitContainer2/VSplitContainer/Healthbar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_ir5m6")
theme_override_styles/fill = SubResource("StyleBoxFlat_fv5uq")
page = 80.0
value = 20.0
show_percentage = false

[node name="Timer" type="Timer" parent="ItemList/VSplitContainer2/VSplitContainer/Healthbar"]
wait_time = 0.4
one_shot = true

[node name="EnergyBar" type="ProgressBar" parent="ItemList/VSplitContainer2/VSplitContainer"]
z_index = 1
custom_minimum_size = Vector2(3, 22)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_xmy64")
theme_override_styles/fill = SubResource("StyleBoxFlat_tfgnj")
value = 60.0
show_percentage = false

[node name="ExhaustionBar" type="ProgressBar" parent="ItemList/VSplitContainer2/VSplitContainer/EnergyBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_lf75b")
theme_override_styles/fill = SubResource("StyleBoxLine_2xkr3")
page = 80.0
value = 20.0
show_percentage = false

[node name="Timer" type="Timer" parent="ItemList/VSplitContainer2/VSplitContainer/EnergyBar"]
wait_time = 0.4
one_shot = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1761.0
offset_top = 41.0
offset_right = 1883.0
offset_bottom = 135.0
text = "Menu"

[connection signal="timeout" from="ItemList/VSplitContainer2/VSplitContainer/Healthbar/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
